# eq

./: ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  SPEC.md  debug_test.edn  example_config.edn  hagen-expire-issuances.edn  karma-police.edn  single_test.edn  test_complex.edn  test_data.edn  test_select.edn
.claude/: settings.local.json
src/: analyzer.rs  builtins.rs  cli.rs  collection_formatter.rs  error.rs  evaluator.rs  formatter.rs  macro_expansion.rs  main.rs  output.rs  primitives.rs  query.rs  vm.rs
src/edn/: mod.rs  parser.rs  value.rs
src/query/: ast.rs  compiler.rs  parser.rs
tests/: integration_test.rs
