[package]
name = "eq"
version = "0.1.0"
edition = "2021"
authors = ["eq contributors"]
description = "Command-line EDN processor inspired by jq"
license-file = "LICENSE"
repository = "https://github.com/mtnygard/eq"
readme = "README.md"
keywords = ["edn", "clojure", "cli", "query", "json"]
categories = ["command-line-utilities", "parsing"]

[[bin]]
name = "eq"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
indexmap = "2.0"
smallvec = "1.11"
bstr = "1.6"

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"
pretty_assertions = "1.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true